# stock_solver

./: .gitignore  LICENSE  README.md  pyproject.toml  tickers
src/stock_solver/dataset/: dataset.py  utils.py
src/stock_solver/dataset/apis/: alpaca.py  alpha_vantage.py  alpha_vantage_calls.py  get_tickers.py
src/stock_solver/dataset/apis/alpha_vantage/: __init__.py  errors.py  types.py
src/stock_solver/dataset/apis/alpha_vantage/requests/: __init__.py  insider_transactions_request.py  news_request.py  overview_request.py  request.py  symbol_request.py  tickers_request.py  time_series_daily_request.py  time_series_intraday_request.py  time_series_month_request.py  time_series_week_request.py
src/stock_solver/dataset/apis/alpha_vantage/results/: __init__.py  insider_transactions_result.py  news_result.py  overview_result.py  result.py  time_series_result.py
src/stock_solver/dataset/apis/alpha_vantage_requests/: __init__.py  insider_transactions_request.py  news_request.py  overview_request.py  request.py  symbol_request.py  tickers_request.py  time_series_daily_request.py
src/stock_solver/dataset/apis/alpha_vantage_results/: __init__.py  insider_transactions_result.py  news_result.py  result.py  time_series_result.py
src/stock_solver/model/: attentions.py  embeddings.py  helper_modules.py  model.py  prob_sparse_attention.py
