[project]
name = "stock-solver"
version = "0.1.0"
description = ""
authors = [
    {name = "KYZZHECIK",email = "ahmadov.avazagha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "logfire (>=4.0.1,<5.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "alpaca-py (>=0.42.0,<0.43.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "transformers (>=4.54.1,<5.0.0)",
    "networkx (>=3.5,<4.0)",
    "joblib (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
